<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lib_name">TXD Workshop</string>
    <string name="newtxd">New</string>
    <string name="run">Run GTA:SA</string>
    <string name="open">Open</string>
    <string name="exportar">Export</string>
    <string name="importar">Import</string>
    <string name="close">Exit</string>
    <string name="save">Save</string>
    <string name="saved">Successfully Saved</string>
    <string name="help">Help</string>
    <string name="about">About:</string>
    <string name="created">Successfully Created</string>
    <string name="noTextures">There are no textures, please import a texture</string>
    <string name="importtex">Import a texture</string>
    <string name="a">Alpha</string>
    <string name="wa">No Alpha</string>
    <string name="nocompressed">No compression</string>
    <string name="compressed">Compression</string>
    <string name="noOpen">Do not have open file textures, please opens one</string>
    <string name="fileb">Choose a file TXD</string>
    <string name="render">RenderWare Engine by GTM is running</string>
    <string name="exported">Successfully Exported!</string>
    <string name="noexported">unfortunately,could not be export :(</string>
    <string name="selectdir">Choose directory for save image</string>
    <string name="nw">unable to modify this file(Not Writable TXD Error)</string>
    <string name="textureName">Name of Texture</string>
    <string name="imported">Successfully Imported!</string>
    <string name="deleted">Successfully Deleted!</string>
    <string name="edited">Successfully Edited</string>
    <string name="renamed">Successfully Renamed</string>
    <string name="ok">OK</string>
    <string name="corrupt">Texture damaged</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="size">Size</string>
    <string name="notex">Is not a Texture</string>
    <string name="extra">Name</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="welcome">New Version 1.1!</string>
    <string name="msg1">Added Render Map</string>
    <string name="msg2">Added Support Uncompressed Image Import</string>
    <string name="traslate">the translation is not correctly</string>
    <string name="apply">Apply</string>
    <string name="only_chr">Only allowed 31 characters</string>
    <string name="options">Options</string>
    <string name="selectdirnew">Choose directory for the New TXD</string>
    <string name="selectimg">Choose Image for Import</string>
    <string name="selectparams">Select Parameters</string>
    <string name="selectname">Choose the Name</string>
    <string name="no_png">Is not an image .png or .jpg</string>
    <string name="path">Path</string>
    <string name="failimg">image has dimensions invalid(See the Manual help)</string>
    <string name="filea">About-en.html</string>
    <string name="fileh">Help-en.html</string>
    <string name="outrange">Out of Limited Range of dimension in pixels( 1 ~ 1024 See the manual of help )</string>
    <string name="textureObj">See Object with this Texture</string>
</resources>
