<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/newtxdbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtxd"/>
            <Button
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"/>
            <Button
                android:id="@+id/exportar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exportar"/>
            <Button
                android:id="@+id/importar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importar"/>
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Render"
                android:onClick="RenderView"/>
            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"/>
            <Button
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run"
                android:onClick="runGame"/>
        </LinearLayout>
    </HorizontalScrollView>
    <View
        android:background="?android:attr/dividerVertical"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ListView
                android:id="@+id/textures"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#898989"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/ivTexture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
